add logs/export API with stream supporting for large amount of logs
